--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
       <a href="#">Contact</a>
       </div>
     </nav>
+
+    <div class="hero-image">
+  <div class="hero-text">
+    <h1>I am John Doe</h1>
+    <p>And I'm a Photographer</p>
+    <button>Hire me</button>
+  </div>
+  
+</div>
 </body>
 </html>
