edit css font and hero section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Safeguard</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!--Navigation Bar-->
@@ -22,11 +24,11 @@
 
     <div class="hero-image">
   <div class="hero-text">
-    <h1>I am John Doe</h1>
-    <p>And I'm a Photographer</p>
-    <button>Hire me</button>
+    <h1>Everyone should always have the right to be safe</h1>
+    <p>learn to recognise whats safe and whats not </p>
+    <button>Learn More</button>
   </div>
-  
+
 </div>
 </body>
 </html>
