add scroll effect and complete of safeguarding section

--- a/index.html
+++ b/index.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safeguard</title>
-    <link rel="stylesheet" href="assets/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Safeguard</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet" />
+
+  <!-- Smooth scroll behavior -->
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
+
 <body>
-    <!--Navigation Bar-->
-    <nav>
-        <div class="logo">
-          <img src="assets/images/encrypted.png" alt="safeguard logo">
-        </div>
-      <div class="nav-buttons">
-      <a href="#">What is Safeguarding?</a>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <div class="logo">
+      <img src="assets/images/encrypted.png" alt="Safeguard logo" />
+    </div>
+    <div class="nav-buttons">
+      <a href="#safeguarding">What is Safeguarding?</a>
       <a href="#">Signs to Watch For</a>
       <a href="#">Action Steps</a>
       <a href="#">Contact</a>
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="hero-image">
-  <div class="hero-text">
-    <h1>Everyone should always have the right to be safe</h1>
-    <p>learn to recognise whats safe and whats not </p>
-    <button>Learn More</button>
+  <!-- Hero Section -->
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Everyone should always have the right to be safe</h1>
+      <p>Learn to recognise what's safe and what's not</p>
+      <a href="#safeguarding" class="tag-button">Learn More</a>
+    </div>
   </div>
 
-</div>
+  <!-- Safeguarding Section -->
+  <section id="safeguarding" class="safeguarding-section">
+    <div class="text-content">
+      <h2>What is Safeguarding?</h2>
+      <p>
+        Safeguarding is the ability to protect the youth and adults from abuse, neglect or harm.
+        It's the safe environment that allows us to prevent this.
+      </p>
+      <p>
+        Our commitment to safeguarding means ensuring that all individuals are protected from any form
+        of abuse, whether physical, emotional, or psychological.
+      </p>
+      <a href="https://www.youtube.com/watch?v=Mjo7Kz_4cfk" class="tag-button" target="_blank" rel="noopener">Watch video</a>
+    </div>
+    <div class="image-content">
+      <img src="assets/images/istockphoto-1490764452-612x612.jpg" alt="Person holding safeguarding report on tablet" />
+    </div>
+  </section>
+
 </body>
+
 </html>
