edit background color and html plus css elements overall

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="nav-buttons">
       <a href="#safeguarding">What is Safeguarding?</a>
-      <a href="#">Signs to Watch For</a>
+      <a href="#signs">Signs to Watch For</a>
       <a href="#">Action Steps</a>
       <a href="#">Contact</a>
     </div>
@@ -52,12 +52,76 @@
         Our commitment to safeguarding means ensuring that all individuals are protected from any form
         of abuse, whether physical, emotional, or psychological.
       </p>
-      <a href="https://www.youtube.com/watch?v=Mjo7Kz_4cfk" class="tag-button" target="_blank" rel="noopener">Watch video</a>
+      <a href="https://www.youtube.com/watch?v=Mjo7Kz_4cfk" class="tag-button" target="_blank" rel="noopener">Watch
+        video</a>
     </div>
     <div class="image-content">
       <img src="assets/images/istockphoto-1490764452-612x612.jpg" alt="Person holding safeguarding report on tablet" />
     </div>
   </section>
+
+  <!-- Signs to Watch For Section -->
+ <section id="signs" class="signs-section">
+  <h2>Signs to Watch For</h2>
+
+  <div class="signs-grid">
+
+    <!-- Card 1: Emotional Withdrawal -->
+    <div class="sign-card">
+      <img src="assets/images/pexels-pixabay-416405.jpg" alt="Child sitting alone">
+      <div class="card-content">
+        <h3>Emotional Withdrawal</h3>
+        <p>A psychological state where an individual becomes distant, uncommunicative, and emotionally unavailable.</p>
+      </div>
+    </div>
+    <div class="sign-details">
+      <h3>Emotional Withdrawal</h3>
+      <ul>
+        <li>Avoiding eye contact</li>
+        <li>Shyness or social detachment</li>
+        <li>Separation from others</li>
+        <li>Triggered by trauma or neglect</li>
+      </ul>
+    </div>
+
+    <!-- Card 2: Physical Marks -->
+    <div class="sign-card">
+      <img src="assets/images/pexels-tima-miroshnichenko-6913241.jpg" alt="Bruised arm">
+      <div class="card-content">
+        <h3>Physical Marks</h3>
+        <p>Unexplained bruises, burns, or recurring injuries that may indicate abuse.</p>
+      </div>
+    </div>
+    <div class="sign-details">
+      <h3>Physical Marks</h3>
+      <ul>
+        <li>Unexplained bruises or cuts</li>
+        <li>Burn marks (e.g., cigarette shapes)</li>
+        <li>Inconsistent or hesitant explanations</li>
+      </ul>
+    </div>
+
+    <!-- Card 3: Behavioral Changes -->
+    <div class="sign-card">
+      <img src="assets/images/pexels-pixabay-416405.jpg" alt="Teen showing aggressive behavior">
+      <div class="card-content">
+        <h3>Behavioral Changes</h3>
+        <p>Unusual aggression, fearfulness, or anxiety may indicate a problem.</p>
+      </div>
+    </div>
+    <div class="sign-details">
+      <h3>Behavioral Changes</h3>
+      <ul>
+        <li>Sudden mood swings</li>
+        <li>Fear of specific people</li>
+        <li>Excessive clinginess or rebellion</li>
+        <li>Loss of interest in normal activities</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
 
 </body>
 
