--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Safeguard</title>
   <link rel="stylesheet" href="assets/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet" />
-
-  <!-- Smooth scroll behavior -->
   <style>
     html {
       scroll-behavior: smooth;
@@ -20,16 +17,18 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <div class="logo">
+  <div class="logo">
+    <a href="#">
       <img src="assets/images/encrypted.png" alt="Safeguard logo" />
-    </div>
-    <div class="nav-buttons">
-      <a href="#safeguarding">What is Safeguarding?</a>
-      <a href="#signs">Signs to Watch For</a>
-      <a href="#">Action Steps</a>
-      <a href="#">Contact</a>
-    </div>
-  </nav>
+    </a>
+  </div>
+  <div class="nav-buttons">
+    <a href="#safeguarding">What is Safeguarding?</a>
+    <a href="#signs">Signs to Watch For</a>
+    <a href="#action-steps">Action Steps</a>
+    <a href="#contact">Contact</a>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <div class="hero-image">
@@ -61,68 +60,121 @@
   </section>
 
   <!-- Signs to Watch For Section -->
- <section id="signs" class="signs-section">
-  <h2>Signs to Watch For</h2>
+  <section id="signs" class="signs-section">
+    <h2>Signs to Watch For</h2>
 
-  <div class="signs-grid">
+    <div class="signs-grid">
 
-    <!-- Card 1: Emotional Withdrawal -->
-    <div class="sign-card">
-      <img src="assets/images/pexels-pixabay-416405.jpg" alt="Child sitting alone">
-      <div class="card-content">
+      <!-- Emotional Withdrawal -->
+      <div class="sign-card">
+        <img src="assets/images/pexels-pixabay-416405.jpg" alt="Child sitting alone">
+        <div class="card-content">
+          <h3>Emotional Withdrawal</h3>
+          <p>A psychological state where an individual becomes distant, uncommunicative, and emotionally unavailable.</p>
+        </div>
+      </div>
+      <div class="sign-details">
         <h3>Emotional Withdrawal</h3>
-        <p>A psychological state where an individual becomes distant, uncommunicative, and emotionally unavailable.</p>
+        <ul>
+          <li>Avoiding eye contact</li>
+          <li>Shyness or social detachment</li>
+          <li>Separation from others</li>
+          <li>Triggered by trauma or neglect</li>
+        </ul>
       </div>
-    </div>
-    <div class="sign-details">
-      <h3>Emotional Withdrawal</h3>
-      <ul>
-        <li>Avoiding eye contact</li>
-        <li>Shyness or social detachment</li>
-        <li>Separation from others</li>
-        <li>Triggered by trauma or neglect</li>
-      </ul>
-    </div>
 
-    <!-- Card 2: Physical Marks -->
-    <div class="sign-card">
-      <img src="assets/images/pexels-tima-miroshnichenko-6913241.jpg" alt="Bruised arm">
-      <div class="card-content">
+      <!-- Physical Marks -->
+      <div class="sign-card">
+        <img src="assets/images/pexels-tima-miroshnichenko-6913241.jpg" alt="Bruised arm">
+        <div class="card-content">
+          <h3>Physical Marks</h3>
+          <p>Unexplained bruises, burns, or recurring injuries that may indicate abuse.</p>
+        </div>
+      </div>
+      <div class="sign-details">
         <h3>Physical Marks</h3>
-        <p>Unexplained bruises, burns, or recurring injuries that may indicate abuse.</p>
+        <ul>
+          <li>Unexplained bruises or cuts</li>
+          <li>Burn marks (e.g., cigarette shapes)</li>
+          <li>Inconsistent or hesitant explanations</li>
+        </ul>
       </div>
-    </div>
-    <div class="sign-details">
-      <h3>Physical Marks</h3>
-      <ul>
-        <li>Unexplained bruises or cuts</li>
-        <li>Burn marks (e.g., cigarette shapes)</li>
-        <li>Inconsistent or hesitant explanations</li>
-      </ul>
-    </div>
 
-    <!-- Card 3: Behavioral Changes -->
-    <div class="sign-card">
-      <img src="assets/images/pexels-pixabay-416405.jpg" alt="Teen showing aggressive behavior">
-      <div class="card-content">
+      <!-- Behavioral Changes -->
+      <div class="sign-card">
+        <img src="assets/images/pexels-pixabay-416405.jpg" alt="Teen showing aggressive behavior">
+        <div class="card-content">
+          <h3>Behavioral Changes</h3>
+          <p>Unusual aggression, fearfulness, or anxiety may indicate a problem.</p>
+        </div>
+      </div>
+      <div class="sign-details">
         <h3>Behavioral Changes</h3>
-        <p>Unusual aggression, fearfulness, or anxiety may indicate a problem.</p>
+        <ul>
+          <li>Sudden mood swings</li>
+          <li>Fear of specific people</li>
+          <li>Excessive clinginess or rebellion</li>
+          <li>Loss of interest in normal activities</li>
+        </ul>
       </div>
     </div>
-    <div class="sign-details">
-      <h3>Behavioral Changes</h3>
-      <ul>
-        <li>Sudden mood swings</li>
-        <li>Fear of specific people</li>
-        <li>Excessive clinginess or rebellion</li>
-        <li>Loss of interest in normal activities</li>
-      </ul>
+  </section>
+
+  <!-- Action Steps Section -->
+  <section class="action-section" id="action-steps">
+    <h2>How You Can Help</h2>
+    <p class="intro-text">
+      When it comes to safeguarding, everyone has a role to play. Here are a few key steps to take action responsibly:
+    </p>
+
+    <div class="step-container">
+      <div class="step-card">
+        <div class="step-icon">✔</div>
+        <div class="step-info">
+          <h3>Notice the Signs</h3>
+          <p>Stay aware of unusual behaviors or physical indicators that may suggest abuse or neglect.</p>
+        </div>
+      </div>
+
+      <div class="step-card">
+        <div class="step-icon">📝</div>
+        <div class="step-info">
+          <h3>Record Details</h3>
+          <p>Document what you've seen or heard factually, including dates, times, and locations if possible.</p>
+        </div>
+      </div>
+
+      <div class="step-card">
+        <div class="step-icon">📞</div>
+        <div class="step-info">
+          <h3>Take Action</h3>
+          <p>Report to a trusted authority figure or use official safeguarding channels in your school or organization.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Contact form section-->
+  <section id="contact" class="contact-section">
+  <h2>Contact Us</h2>
+  <form action="#" method="POST" class="contact-form">
+    <div class="form-group">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" required placeholder="Enter your name">
     </div>
 
-  </div>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required placeholder="you@example.com">
+    </div>
+
+    <div class="form-group">
+      <label for="message">Your Message</label>
+      <textarea id="message" name="message" rows="5" required placeholder="Type your message here..."></textarea>
+    </div>
+
+    <button type="submit" class="tag-button">Send Message</button>
+  </form>
 </section>
 
-
 </body>
-
 </html>
