add footer at bottom of the page

--- a/index.html
+++ b/index.html
@@ -176,5 +176,12 @@
   </form>
 </section>
 
+<!--Footer Section-->
+<footer class="site-footer">
+  <p>&copy; 2025 Safeguard. All rights reserved.</p>
+</footer>
+
+
+
 </body>
 </html>
