--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Safeguard</title>
   <link rel="stylesheet" href="assets/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet" />
+   <link rel="icon" href="assets/images/encrypted.png" type="image/png">
+
   <style>
     html {
       scroll-behavior: smooth;
